# window-aichat

./: .dockerignore  .env.example  .flake8  .gitignore  .windsurfrules  AIChatDesktop.spec  ASYNC_NOTES.md  DEPLOY.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPROVEMENTS_SUMMARY.md  LoginPage.jsx  MEMORY.md  README.md  SETUP_COMPLETE.bat  SETUP_COMPLETE.ps1  VPS_DEPLOY.md  ai_core.py  aichat.db  alembic.ini  backend.py  build_app.cmd  build_app.py  build_web_app.sh  clean_and_push.bat  deploy_app.sh  diagnose.sh  docker-compose.prod.yml  docker-compose.yml  github_handler.py  icon_info.txt  install-and-deploy-window-aichat.sh  install.bat  install_dependencies.cmd  main.py  main.py.backup_20260121_185140  nginx.conf  push_to_github.bat  (+12 more)
.github/scripts/: healthcheck.sh  retry.sh  verify-ghcr.sh
.github/workflows/: ci-cd.yml  docker-build.yml
.history-memo/: 2026-01-21.md
.trae/documents/: Window-AIChat Modernization Plan.md  (+5 more)
.vercel/: project.json
_gemini_code_review/: index.html
api/: index.py
db_migrations/: env.py
scripts/: build_web_app.sh  cleanup_project.py  deploy_docker.sh  deploy_windows.cmd  fix_api.sh  fix_deployment.sh  fix_env.py  test_on_windows.py
tests/: test_api_contracts.py  test_ws_tools.py
ui/: ai_provider.py  code_chat_window.py  dev_tool_window.py  markdown_renderer.py  settings_window.py  theme_manager.py
webapp/: .env.example  package-lock.json  package.json  vite.config.ts  vitest.config.ts
window-aichat-web/: index.html  package-lock.json  package.json
window_aichat/: __main__.py  config.py
(+75 files in other folders)
